completed task4: divide app into further layers, add entity converter, add config file
